test_suite5/ALAN/test_suite/alan-2022-examples/failing/008460_mutation.alan
source bB1 function J() to get _ begin relax end begin relax end
